@@ -127,5 +127,41 @@ config EXAMPLES_USBMSC_TRACEINTERRUPTS
 		This setting will show USB device controller interrupt-related events.
 
 endif # EXAMPLES_USBMSC_TRACE
+
+if NSH_BUILTIN_APPS
+
+config EXAMPLES_USBMSC_CMD_STACKSIZE
+	int "Stacksize of msconn and msdis commands"
+	default 768
+	---help---
+		Size of the stack used by the small 'msconn' and 'msdis' command
+		applications.  Warning, just because the applications are small,
+		the stack usage could still be deep!
+
+config EXAMPLES_USBMSC_CMD_PRIORITY
+	int "Priority of the msconn and msdis commands"
+	default 100
+	---help---
+		Priority of the small 'msconn' and 'msdis' command applications.
+
+config EXAMPLES_USBMSC_DAEMON_STACKSIZE
+	int "Stacksize of msconn daemon"
+	default 2048
+	---help---
+		To avoid threading entanglements, the USB MSC class is initialized
+		on a daemon thread.  This permits the msconn application to return
+		to the NSH command line immediately.  This is the stack used for
+		that short-lived USB MSC initialization daemon.
+
+config EXAMPLES_USBMSC_DAEMON_PRIORITY
+	int "Priority of the msconn daemon"
+	default 100
+	---help---
+		To avoid threading entanglements, the USB MSC class is initialized
+		on a daemon thread.  This permits the msconn application to return
+		to the NSH command line immediately.  This is the priority used for
+		that short-lived USB MSC initialization daemon.
+
+endif # NSH_BUILTIN_APPS
 endif # EXAMPLES_USBMSC
 
