@@ -62,13 +62,16 @@ ROOTDEPPATH	= --dep-path .
 
 # USB storage built-in application info
 
+CONFIG_EXAMPLES_USBMSC_CMD_STACKSIZE ?= 768
+CONFIG_EXAMPLES_USBMSC_CMD_PRIORITY ?= SCHED_PRIORITY_DEFAULT
+
 APPNAME1	= msconn
-PRIORITY1	= SCHED_PRIORITY_DEFAULT
-STACKSIZE1	= 2048
+PRIORITY1	= $(CONFIG_EXAMPLES_USBMSC_CMD_PRIORITY)
+STACKSIZE1	= $(CONFIG_EXAMPLES_USBMSC_CMD_STACKSIZE)
 
 APPNAME2	= msdis
-PRIORITY2	= SCHED_PRIORITY_DEFAULT
-STACKSIZE2	= 2048
+PRIORITY2	= $(CONFIG_EXAMPLES_USBMSC_CMD_PRIORITY)
+STACKSIZE2	= $(CONFIG_EXAMPLES_USBMSC_CMD_STACKSIZE)
 
 # Common build
 
