@@ -89,6 +89,12 @@
 #  undef CONFIG_EXAMPLES_USBMSC_DEVPATH3
 #endif
 
+#if defined(CONFIG_NSH_BUILTIN_APPS) && defined(CONFIG_SCHED_WAITPID)
+#  ifndef CONFIG_EXAMPLES_USBMSC_DAEMON_STACKSIZE
+#    define CONFIG_EXAMPLES_USBMSC_DAEMON_STACKSIZE 2048
+#  endif
+#endif
+
 /* Debug ********************************************************************/
 
 #ifdef CONFIG_CPP_HAVE_VARARGS
